Fixing double scroll #67. various styles.  Changes to be committed: 	new file:   .yarnrc 	modified:   src/components/forkMeRibbon/index.js 	modified:   src/components/forkMeRibbon/style.less 	modified:   src/components/noders/data.json 	modified:   src/components/noders/index.js 	modified:   src/components/noders/member.js 	modified:   src/components/organizers/style.less 	modified:   src/manifest.json 	modified:   src/style/index.less

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,8 +2,9 @@
 
 html {
   background: @noders url(../assets/noders/bg3-min.jpg);
-	background-size: cover;
-	background-attachment: fixed;
+  background-size: cover;
+  background-attachment: fixed;
+  background: @dark !important;
 }
 
 body {
@@ -12,36 +13,28 @@ body {
   z-index: 2;
   width: 100%;
   height: 100%;
+  overflow: visible !important;
 }
 
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	font-family: 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-	color: #444;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-#app {
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: 'Helvetica Neue', arial, sans-serif;
+  font-weight: 400;
+  color: #444;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 ::selection {
   background: @noders; /* WebKit/Blink Browsers */
 }
 
-
 * {
-	box-sizing: border-box;
-}
-
-#app {
-	height: 100%;
+  box-sizing: border-box;
 }
 
 .section-container {
@@ -57,5 +50,5 @@ html, body {
 }
 
 .section-content {
-  margin: 6em 0 30px !important;
+  margin: 6em 0 0 0 !important;
 }
